# ml-practical-sessions

./: README.md  pyproject.toml
ml_practical_sessions/: 1.linear_regression.ipynb  2.model_selection.ipynb  3.classification.ipynb  4.clustering.ipynb  prova.py
ml_practical_sessions/bayesian_optimization/: bayesian_optimization_with_local_max.py  bayesian_optimization_without_local_max.ipynb  bayesian_optimization_without_local_max.py
