[tool.poetry]
name = "ml-practical-sessions"
version = "0.1.0"
description = ""
authors = ["Massimiliano Arca <massimiliano.arca@polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pandas = "^2.2.3"
numpy = "^2.2.2"
scikit-learn = "^1.6.1"
jupyter = "^1.1.1"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
