[tool.poetry]
name = "ml-practical-sessions"
version = "0.1.0"
description = ""
authors = ["Massimiliano Arca <massimiliano.arca@polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
pandas = "^2.2.3"
numpy = "^2.2.2"
scikit-learn = "1.5.2"
jupyter = "^1.1.1"
plotly = "^5.24.1"
matplotlib = "^3.10.0"
prophet = "^1.1.6"
statsmodels = "^0.14.4"
scipy = "^1.15.1"
openpyxl = "^3.1.5"
xgboost = "^2.1.3"
mlxtend = "^0.23.4"
tqdm = "^4.67.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
